<resources>
    <string name="app_name">Droid Stream Deck</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="port">Port</string>
    <string name="ip_address">Ip Address</string>
    <string name="connect">connect</string>
    <string name="ip_address_ET">IP Address</string>
    <string name="port_ET">Port</string>
    <string name="connect_ET">Connect</string>
</resources>
